[gd_scene load_steps=2 format=2]

[ext_resource path="res://chatManager.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="inputMessage" type="LineEdit" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="chatBox" type="TextEdit" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -34.0

[node name="listeUser" type="TextEdit" parent="Panel/chatBox"]
anchor_left = 0.511
anchor_top = 0.005
anchor_right = 1.0
anchor_bottom = 0.171
margin_left = -0.264038
margin_top = 0.17
margin_right = -4.0
margin_bottom = 0.213997
